@@ -1,5 +1,11 @@
 2009-12-29  Andoni Morales Alastruey  <amorales@flumotion.com>
 
+	* flumotion/test/test_resource.py:
+	* flumotion/test/test_resource.py (added):
+	Added test suite for HTTPLiveStreamingResource
+
+2009-12-29  Andoni Morales Alastruey  <amorales@flumotion.com>
+
 	* flumotion/component/consumers/applestreamer/resources.py:
 	Return a HTTP Forbiden error when the request is out of the mountpoint
 
